--- a/.github/workflows/check_vmess.yml
+++ b/.github/workflows/check_vmess.yml
@@ -21,7 +21,7 @@ jobs:
       - name: 安装依赖
         run: |
           python -m pip install --upgrade pip
-          pip install requests  # 只需安装需要的依赖，此处假设使用 requests 发送 HTTP 请求
+          pip install requests
 
       - name: 执行Python脚本恢复vmess服务并发送Telegram消息
         env:
@@ -29,4 +29,4 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          python3 recover_vmess.py
+          python recover_vmess.py
