--- a/.github/workflows/check_vmess.yml
+++ b/.github/workflows/check_vmess.yml
@@ -29,4 +29,4 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          python recover_vmess.py
+          python3 recover_vmess.py
