--- a/.github/workflows/check_vmess.yml
+++ b/.github/workflows/check_vmess.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: 安装sshpass
+        run: sudo apt-get install -y sshpass
+
       - name: 安装依赖
         run: |
           python -m pip install --upgrade pip
