--- a/.github/workflows/check_vmess.yml
+++ b/.github/workflows/check_vmess.yml
@@ -1,4 +1,4 @@
-name: 恢复vmess服务并发送Telegram消息
+name: 恢复5s-6s-sb-tnega服务并发送Telegram消息
 
 on:
   schedule:
@@ -26,10 +26,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests
 
-      - name: 执行Python脚本恢复vmess服务并发送Telegram消息
+      - name: 执行Python脚本恢复5s-6s-sb-tnega服务并发送Telegram消息
         env:
           ACCOUNTS_JSON: ${{ secrets.ACCOUNTS_JSON }}
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          python3 recover_vmess.py
+          python3 recover_5s-6s-sb-tnega.py
